--- a/src/app/financial-chart/financial-chart.component.html
+++ b/src/app/financial-chart/financial-chart.component.html
@@ -1,3 +1,13 @@
+<div class="clock">
+  {{ now }}
+</div>
+
+<div class="clock">
+  {{ hasPosition }}
+</div>
+
+<div class="clock">USD {{ runningPnl | number: "1.2-2" }}</div>
+
 <div class="chart">
   <canvas
     height="600px"
