--- a/src/app/financial-chart/financial-chart.component.css
+++ b/src/app/financial-chart/financial-chart.component.css
@@ -1,5 +1,6 @@
 .clock {
-    font-size: 48px;
+    font-size: 16px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: inline-block;
     margin: 16px;
 }
