--- a/src/app/financial-chart/financial-chart.component.html
+++ b/src/app/financial-chart/financial-chart.component.html
@@ -6,9 +6,9 @@
 
 <div class="clock">Position: {{ hasPosition }}</div>
 
-<div class="clock">Current PnL: USD {{ currentPnl | number: "1.2-2" }}</div>
-<div class="clock">Running PnL: USD {{ runningPnl | number: "1.2-2" }}</div>
-<div class="clock">Hold PnL: USD {{ holdPnl | number: "1.2-2" }}</div>
+<div class="clock">Trade P&L: USD {{ currentPnl | number: "1.2-2" }}</div>
+<div class="clock">Running P&L: USD {{ runningPnl | number: "1.2-2" }}</div>
+<div class="clock">Hold P&L: USD {{ holdPnl | number: "1.2-2" }}</div>
 
 <div class="chart">
   <canvas
